--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container col-8 mt-5 text-secondary bg-light rounded">
         <br>
         <h2>Alta de clientes</h2>
-            <form method="post" action="2-informacion_adicional.html" class="was-validated">
+            <form method="get" action="2-informacion_adicional.html" class="was-validated">
                 <div class="mb-3 mt-3">
                     <label for="name" class="form-label text-secondary">Nombre (3-20 letras):</label>
                     <input type="text" name="name" id="name" class="form-control" placeholder="Enter your name" pattern="[a-zA-Z\s]{3,20}" required>
